development section added

--- a/index.html
+++ b/index.html
@@ -18,27 +18,58 @@
     <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
-    <!-- Nav bar -->
-    <nav class="navbar">
-      <div class="container nav-container">
-        <div>
-          <h1>Career<span>.io</span></h1>
+    <!-- Header section -->
+    <header>
+      <!-- Nav bar -->
+      <nav class="navbar">
+        <div class="container nav-container">
+          <div>
+            <h1>Career<span>.io</span></h1>
+          </div>
+          <div><button class="btn">Download Resume</button></div>
         </div>
-        <div><button class="btn">Download Resume</button></div>
-      </div>
-    </nav>
-    <!-- Hero section -->
-    <section class="hero container">
-      <div class="hero-container">
-        <img src="assets/hero-developer.png" alt="Hero image" />
-        <h1>"In 2025, I hope to become a Developer."</h1>
-        <p>
-          I have a big dream of becoming a web developer in 2025. I am currently
-          learning HTML and CSS from Programming Hero. Thanks to programming
-          hero for the bootcamp campain.
-        </p>
-        <button class="btn">Let’s Connect</button>
-      </div>
-    </section>
+      </nav>
+      <!-- Hero section -->
+      <section class="hero container">
+        <div class="hero-container">
+          <img src="assets/hero-developer.png" alt="Hero image" />
+          <h1>"In 2025, I hope to become a Developer."</h1>
+          <p>
+            I have a big dream of becoming a web developer in 2025. I am
+            currently learning HTML and CSS from Programming Hero. Thanks to
+            programming hero for the bootcamp campain.
+          </p>
+          <button class="btn">Let’s Connect</button>
+        </div>
+      </section>
+    </header>
+    <!-- Main section -->
+    <main>
+      <!-- Why development section -->
+      <section class="container why-development">
+        <div class="development">
+          <h2 class="title">Why Web Development??</h2>
+          <p class="description">
+            Now a days Web development is a beautiful sector for build up own
+            career. This is why i choose be a web developer. I believe I become
+            an excellent web developer one day. And I will do my best for
+            achieve my goal
+          </p>
+        </div>
+        <div class="development-content-container">
+          <div class="development-content">
+            <h2>I will Do Coding and Change The World</h2>
+            <p class="description">
+              I will work hard and will do my best for build up my career with
+              codding
+            </p>
+            <button class="btn">Let’s Discuss</button>
+          </div>
+          <div class="development-image">
+            <img src="assets/working-developer.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
