--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <!-- CSS link -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
@@ -68,6 +74,32 @@
           <div class="development-image">
             <img src="assets/working-developer.png" alt="" />
           </div>
+        </div>
+      </section>
+      <!-- Inspiration section -->
+      <section class="container inspiration-container">
+        <div class="inspiration-content">
+          <h2 class="title">My Inspiration</h2>
+          <p class="description azeret-font">
+            My main inspiration for programming is one of my brother named
+            "Shohag Roy". At first I here about programming from him. And my
+            second inspiration is "Programming Hero, Jhankar Mahbub vai, Ferdous
+            Zihad vai" and all other programming hero mentors.
+          </p>
+        </div>
+        <!-- Video section -->
+        <div class="inspiration-video">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/DGHn2uOAVCE?si=6s73mAa2ejOqpLPX"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          >
+          </iframe>
         </div>
       </section>
     </main>
