target section added

--- a/index.html
+++ b/index.html
@@ -102,6 +102,34 @@
           </iframe>
         </div>
       </section>
+      <!-- My target section -->
+      <section class="container target-container">
+        <h2 class="title">My Current Target</h2>
+        <p class="description">
+          My current target is learn programming with dedication.
+        </p>
+        <div class="card-container">
+          <div class="card">
+            <img src="assets/html-icon.png" alt="" />
+            <h2>HTML</h2>
+            <a target="_blank" href="https://www.w3schools.com/html/"
+              >Learn More</a
+            >
+          </div>
+          <div class="card">
+            <img src="assets/css-icon.png" alt="" />
+            <h2>CSS</h2>
+            <a target="_blank" href="https://www.w3schools.com/css/"
+              >Learn More</a
+            >
+          </div>
+          <div class="card">
+            <img src="assets/tailwind-icon.png" alt="" />
+            <h2>Tailwind</h2>
+            <a target="_blank" href="https://tailwindcss.com/">Learn More</a>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
