--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
           <div>
             <h1>Career<span>.io</span></h1>
           </div>
-          <div><button class="btn">Download Resume</button></div>
+          <div>
+            <a
+              class="btn anchor-default"
+              href="https://drive.google.com/file/d/1UmRiV9ZSLB8wjV19XQj2jYWUJSumZ8pj/view?usp=sharing"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Download Resume</a
+            >
+          </div>
         </div>
       </nav>
       <!-- Hero section -->
@@ -45,7 +53,8 @@
             currently learning HTML and CSS from Programming Hero. Thanks to
             programming hero for the bootcamp campain.
           </p>
-          <button class="btn">Let’s Connect</button>
+          <!-- <button class="btn">Let’s Connect</button> -->
+          <a class="btn anchor-default" href="#contact">Let’s Connect</a>
         </div>
       </section>
     </header>
@@ -131,5 +140,34 @@
         </div>
       </section>
     </main>
+    <!-- Footer section -->
+    <footer>
+      <section class="container footer-container">
+        <div>
+          <h2 class="azeret-font">An Open Commitment by Hadi Al Hamza</h2>
+        </div>
+        <div id="contact">
+          <a
+            href="https://www.facebook.com/hadialhamza/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="assets/facebook.png" alt="facebook" />
+          </a>
+          <a
+            href="https://github.com/hadialhamza"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><img src="assets/github.png" alt="github"
+          /></a>
+          <a
+            href="https://www.linkedin.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><img src="assets/linkedin.png" alt="linkedin"
+          /></a>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
