laptop device responsive

--- a/index.html
+++ b/index.html
@@ -34,11 +34,9 @@
           </div>
           <div>
             <a
-              class="btn anchor-default"
               href="https://drive.google.com/file/d/1UmRiV9ZSLB8wjV19XQj2jYWUJSumZ8pj/view?usp=sharing"
               target="_blank"
-              rel="noopener noreferrer"
-              >Download Resume</a
+              ><button class="btn">Download Resume</button></a
             >
           </div>
         </div>
@@ -54,7 +52,7 @@
             programming hero for the bootcamp campain.
           </p>
           <!-- <button class="btn">Let’s Connect</button> -->
-          <a class="btn anchor-default" href="#contact">Let’s Connect</a>
+          <a href="#contact"><button class="btn">Let’s Connect</button></a>
         </div>
       </section>
     </header>
@@ -109,13 +107,15 @@
             allowfullscreen
           >
           </iframe>
+          </video>
         </div>
       </section>
       <!-- My target section -->
       <section class="container target-container">
         <h2 class="title">My Current Target</h2>
         <p class="description">
-          My current target is learn programming with dedication.
+          My current target is learn programming with dedication. And explore
+          new things about programming.
         </p>
         <div class="card-container">
           <div class="card">
