small device responsive

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       <!-- Hero section -->
       <section class="hero container">
         <div class="hero-container">
-          <img src="assets/hero-developer.png" alt="Hero image" />
+          <div>
+            <img src="assets/hero-developer.png" alt="Hero image" />
+          </div>
           <h1>"In 2025, I hope to become a Developer."</h1>
           <p>
             I have a big dream of becoming a web developer in 2025. I am
